--- a/locales/nb.json
+++ b/locales/nb.json
@@ -1,27 +1,27 @@
 {
   "about": {
-    "bug-reports": "Bug reports and feature requests:",
-    "bug-reports-back": "server / backend, routing engine, Android app, profiles, brouter.de site",
-    "bug-reports-front": "web client / frontend.",
-    "chat": "Chat with users and developers",
-    "contact": "Contacto:",
-    "data": "Datos:",
+    "bug-reports": "Feilrapporter og funksjonsetterspørsler",
+    "bug-reports-back": "tjener / bak-ende, rutemotor, Android-app, profiler, brouter.de-siden",
+    "bug-reports-front": "webklient / for-ende",
+    "chat": "Chat med brukere og utviklere",
+    "contact": "Kontakt:",
+    "data": "Data:",
     "data-description": "This is based on <a href=\"https://www.openstreetmap.org\" target=\"_blank\">OpenStreetMap</a>. It is usually updated daily, see dates of <a href=\"https://brouter.de/brouter/segments4/\" target=\"_blank\">data files</a>.",
-    "description": "Online service of the BRouter routing engine. For the offline Android app and more information see <a href=\"https://brouter.de/\" target=\"_blank\">brouter.de</a>",
-    "details": "<i><a href=\"https://brouter.de/privacypolicy.html\" target=\"_blank\">Privacy Policy</a></i>, \n<i><a href=\"https://github.com/nrenner/brouter-web#credits-and-licenses\" target=\"_blank\">Credits</a></i>,\n<i><a href=\"https://github.com/nrenner/brouter-web/blob/master/CHANGELOG.md\" target=\"_blank\">Changelog</a></i> and\n<i><a href=\"https://github.com/nrenner/brouter-web#readme\" target=\"_blank\">more info</a></i> on the client.",
-    "support": "General discussions/questions, support",
-    "title": "Sobre nós"
+    "description": "Online-tjenesten til BRounter rutemotoren. For offline Android-app og mer informasjon, se <a href=\"https://brouter.de/\" target=\"_blank\">brouter.de</a>",
+    "details": "<i><a href=\"https://brouter.de/privacypolicy.html\" target=\"_blank\">Personvernerklæring</a></i>, \n<i><a href=\"https://github.com/nrenner/brouter-web#credits-and-licenses\" target=\"_blank\">Kreditt</a></i>,\n<i><a href=\"https://github.com/nrenner/brouter-web/blob/master/CHANGELOG.md\" target=\"_blank\">Endringslogg</a></i> og\n<i><a href=\"https://github.com/nrenner/brouter-web#readme\" target=\"_blank\">mer informasjon</a></i> om klienten.",
+    "support": "Generelle diskusjoner/spørsmål, støtte",
+    "title": "Om"
   },
   "credits": {
     "brouter": "BRouter",
     "brouter-license": "<a target=\"_blank\" href=\"https://brouter.de/brouter\">BRouter</a> &copy; Arndt Brenschede",
     "elevation-data": "Elevation data",
-    "esri-license": "<a target=\"_blank\" href=\"http://goto.arcgisonline.com/maps/World_Imagery\">World Imagery</a> &copy; <a target=\"_blank\" href=\"https://www.esri.com/\">Esri</a>, sources: Esri, DigitalGlobe, Earthstar Geographics, CNES/Airbus DS, GeoEye, USDA FSA, USGS, Getmapping, Aerogrid, IGN, IGP, and the GIS User Community",
+    "esri-license": "<a target=\"_blank\" href=\"http://goto.arcgisonline.com/maps/World_Imagery\">World Imagery</a> &copy; <a target=\"_blank\" href=\"https://www.esri.com/\">Esri</a>, kilder: Esri, DigitalGlobe, Earthstar Geographics, CNES/Airbus DS, GeoEye, USDA FSA, USGS, Getmapping, Aerogrid, IGN, IGP, og GIS-brukerfellesskapet",
     "esri-tiles": "Esri World Imagery",
-    "map-data": "Map data",
-    "map-tiles": "Map tiles",
-    "nominatim": "Search by <a href=\"https://wiki.openstreetmap.org/wiki/Nominatim\" target=\"_blank\" data-i18n=\"credits.nominatim\">Nominatim</a>",
-    "openstreetmap": "&copy; <a target=\"_blank\" href=\"https://www.openstreetmap.org/copyright\" >OpenStreetMap contributors</a> under <a target=\"_blank\" href=\"https://opendatacommons.org/licenses/odbl/\" >ODbL</a>"
+    "map-data": "Kartdata",
+    "map-tiles": "Kartfliser",
+    "nominatim": "Søk av <a href=\"https://wiki.openstreetmap.org/wiki/Nominatim\" target=\"_blank\" data-i18n=\"credits.nominatim\">Nominatim</a>",
+    "openstreetmap": "&copy; <a target=\"_blank\" href=\"https://www.openstreetmap.org/copyright\" >OpenStreetMap-bidragsytere</a> under <a target=\"_blank\" href=\"https://opendatacommons.org/licenses/odbl/\" >ODbL</a>"
   },
   "export": {
     "format": "Format",
@@ -29,79 +29,79 @@
     "format_geojson": "GeoJSON",
     "format_gpx": "GPX",
     "format_kml": "KML",
-    "include": "Include",
-    "include_waypoints": "Waypoints",
+    "include": "Inkluder",
+    "include_waypoints": "Veipunkter",
     "route-from-to": "{{from}} -> {{to}} ({{distance}}km)",
     "route-loop": "{{from}} ({{distance}}km)",
-    "title": "Export route",
-    "trackname": "Name"
+    "title": "Eksporter rute",
+    "trackname": "Navn"
   },
   "footer": {
-    "ascend": "Ascend",
-    "cost": "Cost",
-    "distance": "Distance",
-    "energy-per-100km": "Energy per 100 km",
-    "hours": "hours",
-    "hours-abbrev": "h",
-    "kilometer": "kilometers",
+    "ascend": "Stigning",
+    "cost": "Kostnad",
+    "distance": "Distanse",
+    "energy-per-100km": "Energi per 100 km",
+    "hours": "timer",
+    "hours-abbrev": "t",
+    "kilometer": "kilometer",
     "kilometer-abbrev": "km",
-    "kilowatthour": "kilowatt hours",
+    "kilowatthour": "kilowattimer",
     "kilowatthour-abbrev": "kWh",
-    "mean-cost-factor": "Mean cost factor",
-    "meter": "meters",
+    "mean-cost-factor": "Gjennomsnittelig kostnadsfaktor",
+    "meter": "meter",
     "meter-abbrev": "m",
-    "plain-ascend": "Plain ascend",
-    "total-energy": "Total Energy",
-    "travel-time": "Travel time"
+    "plain-ascend": "Stigning",
+    "total-energy": "Total energi",
+    "travel-time": "Reisetid"
   },
   "layers": {
-    "add-base": "Add base layer",
-    "add-overlay": "Add overlay",
-    "customize": "Customize layers",
-    "opacity-slider": "Opacity slider",
-    "placeholder-layer-name": "Custom layer name. (ex: OpenStreetMap)",
-    "placeholder-layer-url": "Custom layer URL. (ex: https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png)",
-    "remove-selection": "Remove selection"
+    "add-base": "Legg til grunnlag",
+    "add-overlay": "Legg til overlag",
+    "customize": "Tilpass lag",
+    "opacity-slider": "Gjennomsiktelighet",
+    "placeholder-layer-name": "Egendefinert lagnavn. (eks. OpenStreetMap)",
+    "placeholder-layer-url": "Egendefinert lag-URL. (eks. https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png)",
+    "remove-selection": "Fjern utvalg"
   },
   "loadNogos": {
-    "defaultProperties": "Default properties",
-    "file": "File (.geojson): ",
-    "load": "Load",
-    "nogoBuffer": "Buffer no-go areas (in meters): ",
-    "nogoRadius": "No-go radius for points (in meters): ",
-    "nogoWeight": "No-go weight (-1 means impassable): ",
-    "source": "Source",
-    "title": "Load no-go areas",
-    "url": "URL: "
+    "defaultProperties": "Standardegenskaper",
+    "file": "Fil (.geojson):",
+    "load": "Last",
+    "nogoBuffer": "Lag buffer rundt no-go områder (i meter):",
+    "nogoRadius": "No-go radius for punkter (i meter):",
+    "nogoWeight": "Vekt på no-go (-1 betyr ugjennomtrengbar)",
+    "source": "Kilde",
+    "title": "Last no-go områder",
+    "url": "URL:"
   },
   "map": {
-    "attribution-osm-long": "OpenStreetMap contributors",
+    "attribution-osm-long": "OpenStreetMap-bidragsytere",
     "attribution-osm-short": "OpenStreetMap",
-    "clear-route": "Clear route data",
-    "copyright": "Copyright",
-    "cycling": "Cycling",
-    "delete-last-point": "Delete last point",
-    "delete-nogo-areas": "Delete all no-go areas",
-    "delete-pois": "Delete all points of interest",
-    "delete-route": "Delete route",
-    "draw-poi-start": "Draw points of interest (P key)",
-    "draw-poi-stop": "Stop drawing points of interest (ESC key)",
-    "draw-route-start": "Draw route (D key)",
-    "draw-route-stop": "Stop drawing route (ESC key)",
-    "enter-poi-name": "Enter Point of Interest name",
-    "hikebike-hillshading": "Hillshading",
-    "hiking": "Hiking",
+    "clear-route": "Tøm rutedata",
+    "copyright": "Opphavsrett",
+    "cycling": "Sykling",
+    "delete-last-point": "Slett siste punkt",
+    "delete-nogo-areas": "Slett alle no-go områder",
+    "delete-pois": "Slett alle interessepunkter",
+    "delete-route": "Slett rute",
+    "draw-poi-start": "Tegn interessepunkter (P-tasten)",
+    "draw-poi-stop": "Slutt å tegne interessepunkter (ESC-tasten)",
+    "draw-route-start": "Tegn rute (D-tasten)",
+    "draw-route-stop": "Slutt å tegne rute (ESC-tasten)",
+    "enter-poi-name": "Angi interessepunktets navn",
+    "hikebike-hillshading": "Høydeskygger",
+    "hiking": "Gåtur",
     "layer": {
       "bing": "Bing Aerial",
       "cycle": "OpenCycleMap (Thunderf.)",
-      "cycling": "Cycling (Waymarked Trails)",
-      "digitalglobe": "DigitalGlobe Recent Imagery",
-      "esri": "Esri World Imagery",
-      "hikebike-hillshading": "Hillshading (Hike & Bike Map)",
-      "hiking": "Hiking (Waymarked Trails)",
+      "cycling": "Sykling (markerte stier)",
+      "digitalglobe": "DigitalGlobe nylige ortofoto",
+      "esri": "Esri World ortofoto",
+      "hikebike-hillshading": "Høydeskygging (Kart for gå- og sykkeltur)",
+      "hiking": "Gåtur (markerte stier)",
       "osm": "OpenStreetMap",
       "osmde": "OpenStreetMap.de",
-      "outdoors": "Outdoors (Thunderforest)",
+      "outdoors": "Utendørs (Thunderforest)",
       "route-quality": "Route quality coding",
       "stamen-terrain": "Terrain (Stamen)",
       "strava-segments": "Strava segments",
