--- a/locales/hu.json
+++ b/locales/hu.json
@@ -6,7 +6,7 @@
     "chat": "Chat felhasználókkal és fejlesztőkkel",
     "contact": "Kapcsolat:",
     "data": "Adatok:",
-    "data-description": "Az adatok alapja az <a href=\"https://www.openstreetmap.org\" target=\"_blank\">OpenStreetMap</a>. Az oldal általában hetente frissül, amikor az új bolygófájl (Planet fájl) elérhetővé válik. A dátumok megtalálhatók az <a href=\"https://brouter.de/brouter/segments4/\" target=\"_blank\">adatfájlokban</a>.",
+    "data-description": "Az alapja az <a href=\"https://www.openstreetmap.org\" target=\"_blank\">OpenStreetMap</a>, és általában naponta frissül (a konkrét időpontok az <a href=\"https://brouter.de/brouter/segments4/\" target=\"_blank\">adatfájlok</a> dátumában olvashatók).",
     "description": "Ez itt a BRouter útvonaltervező motor online szolgáltatása. Az Android alkalmazásról és a további információkról a <a href=\"https://brouter.de/\" target=\"_blank\">brouter.de</a> oldalon olvashat.",
     "details": "<i><a href=\"https://brouter.de/privacypolicy.html\" target=\"_blank\">Adatvédelmi irányelvek</a></i> \n<i><a href=\"https://github.com/nrenner/brouter-web#credits-and-licenses\" target=\"_blank\">stáblista</a></i>,\n<i><a href=\"https://github.com/nrenner/brouter-web/blob/master/CHANGELOG.md\" target=\"_blank\">változásnapló</a></i> és\n<i><a href=\"https://github.com/nrenner/brouter-web#readme\" target=\"_blank\">további tájékoztatás</a></i> a kliensen.",
     "support": "Általános viták/kérdések, támogatás",
@@ -15,6 +15,7 @@
   "credits": {
     "brouter": "BRouter",
     "brouter-license": "<a target=\"_blank\" href=\"https://brouter.de/brouter\">BRouter</a> &copy; Arndt Brenschede",
+    "elevation-data": "Magassági adatok",
     "esri-license": "<a target=\"_blank\" href=\"http://goto.arcgisonline.com/maps/World_Imagery\">Globális légi felvételek</a> &copy; <a target=\"_blank\" href=\"https://www.esri.com/\">Esri</a>, források: Esri, DigitalGlobe, Earthstar Geographics, CNES/Airbus DS, GeoEye, USDA FSA, USGS, Getmapping, Aerogrid, IGN, IGP valamint a GIS felhasználói közösség",
     "esri-tiles": "Esri World Imagery",
     "map-data": "Térképadatok",
@@ -76,18 +77,18 @@
   "map": {
     "attribution-osm-long": "OpenStreetMap közreműködők",
     "attribution-osm-short": "OpenStreetMap",
-    "clear-route": "Clear route data",
+    "clear-route": "Útvonaladatok törlése",
     "copyright": "Szerzői jogok",
     "cycling": "Kerékpározás",
     "delete-last-point": "Utolsó pont törlése",
     "delete-nogo-areas": "Minden elkerülendő terület törlése",
-    "delete-pois": "Delete all points of interest",
+    "delete-pois": "Minden érdekes pont (POI) törlése",
     "delete-route": "Útvonal törlése",
-    "draw-poi-start": "Draw points of interest (P key)",
-    "draw-poi-stop": "Stop drawing points of interest (ESC key)",
+    "draw-poi-start": "Érdekes pont (POI) rajzolása (P billentyű)",
+    "draw-poi-stop": "Érdekes pontok (POI-k) rajzolásának megszakítása (ESC)",
     "draw-route-start": "Útvonal rajzolása (D billentyű)",
     "draw-route-stop": "Útvonal rajzolásának megszakítása (ESC billentyű)",
-    "enter-poi-name": "Enter Point of Interest name",
+    "enter-poi-name": "Érdekes pont (POI) nevének megadása",
     "hikebike-hillshading": "Domborzatárnyékolás",
     "hiking": "Túrázás",
     "layer": {
@@ -101,7 +102,7 @@
       "osm": "OpenStreetMap",
       "osmde": "OpenStreetMap.de",
       "outdoors": "Outdoors (Thunderforest)",
-      "route-quality": "Route quality coding",
+      "route-quality": "Útvonalminőség kódolása",
       "stamen-terrain": "Terrain (Stamen)",
       "strava-segments": "Strava útvonalszakaszok",
       "topo": "OpenTopoMap"
@@ -116,11 +117,12 @@
       "help": "&square; = áthelyezés / átméretezés, <span class=\"fa fa-trash-o\"></span> = törlés,<br>a szerkesztés befejezéséhez kattintson a körre"
     },
     "opacity-slider": "Nyomvonal és jelölők átlátszóságának beállítása",
+    "preview": "Előnézet",
     "privacy": "Adatvédelem",
     "reverse-route": "Útvonal megfordítása",
-    "route-quality-altitude": "Altitude coding",
-    "route-quality-cost": "Cost coding",
-    "route-quality-incline": "Incline coding",
+    "route-quality-altitude": "Magasság kódolása",
+    "route-quality-cost": "Ráfordítás kódolása",
+    "route-quality-incline": "Lejtés kódolása",
     "strava-biking": "Strava motoros útvonalszakaszok megjelenítése",
     "strava-running": "Strava futó útvonalszakaszok megjelenítése",
     "zoomInTitle": "Nagyítás",
@@ -141,7 +143,7 @@
     "load": {
       "nogos": "Elkerülendő területek",
       "title": "Betöltés",
-      "tracks": "Tracks"
+      "tracks": "Nyomvonalak"
     },
     "profile": {
       "car-eco": "Személyautó (gazdaságos)",
@@ -167,10 +169,11 @@
     }
   },
   "sidebar": {
-    "custom-profile": {
-      "title": "Egyedi profil"
+    "customize-profile": {
+      "title": "Profil testreszabása"
     },
     "data": {
+      "sync-map": "Térkép szinkronizálása",
       "title": "Adatok"
     },
     "itinerary": {
@@ -203,10 +206,13 @@
       "title": "Rétegek"
     },
     "profile": {
+      "apply": "Alkalmaz",
       "clear": "Törlés",
       "help": "Súgó",
+      "no_easy_configuration_warning": "Ehhez a profilhoz nem áll rendelkezésre egyszerű konfiguráció.",
+      "options": "Beállítások",
       "placeholder": "Ide írhatja egyedi profilját",
-      "upload": "Feltöltés"
+      "profile": "Profil"
     }
   },
   "title": "BRouter webkliens",
@@ -217,7 +223,7 @@
     "profile-error": "Profilhiba: a kiszolgáló nem válaszol vagy üres választ küld",
     "strava-error": "Hiba történt a Strava útvonalszakaszok lekérésénél: {{error}}",
     "temporary-profile": "<strong>Figyelem:</strong> A kiszolgáló csak ideiglenesen gyorsítótárazza a feltöltött egyedi profilokat.<br/>Kérjük, szerkesztéseit mentse el saját számítógépére.",
-    "tracks-load-error": "Error loading tracks: {{error}}",
+    "tracks-load-error": "Hiba történt a nyomvonalak betöltésekor: {{error}}",
     "upload-error": "Feltöltési hiba: {{error}}"
   }
 }
