--- a/locales/de.json
+++ b/locales/de.json
@@ -86,8 +86,8 @@
     "delete-route": "Route löschen",
     "draw-poi-start": "POI einzeichnen (P-Taste)",
     "draw-poi-stop": "Einzeichnen der POI beenden (ESC-Taste)",
-    "draw-route-start": "Route anzeigen (D-Taste)",
-    "draw-route-stop": "Route entfernen (ESC-Taste)",
+    "draw-route-start": "Route zeichnen (D-Taste)",
+    "draw-route-stop": "Route Zeichnen beenden (ESC-Taste)",
     "enter-poi-name": "POI-Namen eingeben",
     "hikebike-hillshading": "Höhenschummerung",
     "hiking": "Wandern",
