--- a/locales/nb.json
+++ b/locales/nb.json
@@ -6,7 +6,7 @@
     "chat": "Chat med brukere og utviklere",
     "contact": "Kontakt:",
     "data": "Data:",
-    "data-description": "This is based on <a href=\"https://www.openstreetmap.org\" target=\"_blank\">OpenStreetMap</a>. It is usually updated daily, see dates of <a href=\"https://brouter.de/brouter/segments4/\" target=\"_blank\">data files</a>.",
+    "data-description": "Dette er basert på <a href=\"https://www.openstreetmap.org\" target=\"_blank\">OpenStreetMap</a>. Vanligvis blir det oppdatert daglig. Se dato på <a href=\"https://brouter.de/brouter/segments4/\" target=\"_blank\">datafilene</a>.",
     "description": "Online-tjenesten til BRounter rutemotoren. For offline Android-app og mer informasjon, se <a href=\"https://brouter.de/\" target=\"_blank\">brouter.de</a>",
     "details": "<i><a href=\"https://brouter.de/privacypolicy.html\" target=\"_blank\">Personvernerklæring</a></i>, \n<i><a href=\"https://github.com/nrenner/brouter-web#credits-and-licenses\" target=\"_blank\">Kreditt</a></i>,\n<i><a href=\"https://github.com/nrenner/brouter-web/blob/master/CHANGELOG.md\" target=\"_blank\">Endringslogg</a></i> og\n<i><a href=\"https://github.com/nrenner/brouter-web#readme\" target=\"_blank\">mer informasjon</a></i> om klienten.",
     "support": "Generelle diskusjoner/spørsmål, støtte",
@@ -15,7 +15,7 @@
   "credits": {
     "brouter": "BRouter",
     "brouter-license": "<a target=\"_blank\" href=\"https://brouter.de/brouter\">BRouter</a> &copy; Arndt Brenschede",
-    "elevation-data": "Elevation data",
+    "elevation-data": "Høydedata",
     "esri-license": "<a target=\"_blank\" href=\"http://goto.arcgisonline.com/maps/World_Imagery\">World Imagery</a> &copy; <a target=\"_blank\" href=\"https://www.esri.com/\">Esri</a>, kilder: Esri, DigitalGlobe, Earthstar Geographics, CNES/Airbus DS, GeoEye, USDA FSA, USGS, Getmapping, Aerogrid, IGN, IGP, og GIS-brukerfellesskapet",
     "esri-tiles": "Esri World Imagery",
     "map-data": "Kartdata",
@@ -102,54 +102,54 @@
       "osm": "OpenStreetMap",
       "osmde": "OpenStreetMap.de",
       "outdoors": "Utendørs (Thunderforest)",
-      "route-quality": "Route quality coding",
-      "stamen-terrain": "Terrain (Stamen)",
-      "strava-segments": "Strava segments",
+      "route-quality": "Rutekvalitet-koding",
+      "stamen-terrain": "Terreng (Stamen)",
+      "strava-segments": "Strava segmenter",
       "topo": "OpenTopoMap"
     },
-    "loading": "Loading…",
-    "locate-me": "Show me where I am",
+    "loading": "Laster inn...",
+    "locate-me": "Vis meg hvor jeg er",
     "nogo": {
-      "cancel": "Cancel drawing no-go area",
-      "click-drag": "Click and drag to draw circle",
-      "draw": "Draw no-go area (circle)",
-      "edit": "Click to edit",
-      "help": "&square; = move / resize, <span class=\"fa fa-trash-o\"></span> = delete,<br>click circle to quit editing"
+      "cancel": "Avbryt tegning av no-go område",
+      "click-drag": "Klikk og dra for å tegne sirkel",
+      "draw": "Tegn no-go område (sirkel)",
+      "edit": "Klikk for å redigere",
+      "help": "&square; = flytt / endre størrelse, <span class=\"fa fa-trash-o\"></span> = slett,<br>klikk på sirkelen for å avslutte redigering"
     },
-    "opacity-slider": "Set transparency of route track and markers",
-    "preview": "Preview",
-    "privacy": "Privacy",
-    "reverse-route": "Reverse route",
-    "route-quality-altitude": "Altitude coding",
-    "route-quality-cost": "Cost coding",
-    "route-quality-incline": "Incline coding",
-    "strava-biking": "Show Strava biking segments",
-    "strava-running": "Show Strava running segments",
-    "zoomInTitle": "Zoom in",
-    "zoomOutTitle": "Zoom out"
+    "opacity-slider": "Angi gjennomsiktighet på rute-sti og markører.",
+    "preview": "Forhåndsvisning",
+    "privacy": "Personvern",
+    "reverse-route": "Snu rute",
+    "route-quality-altitude": "Høyde-koding",
+    "route-quality-cost": "Kostnad-koding",
+    "route-quality-incline": "Stigning-koding",
+    "strava-biking": "Vis Strava sykkel-segmenter",
+    "strava-running": "Vis Strava løpe-segmenter",
+    "zoomInTitle": "Zoom inn",
+    "zoomOutTitle": "Zoom ut"
   },
   "modal": {
-    "close": "Close"
+    "close": "Lukk"
   },
   "navbar": {
-    "about": "About",
+    "about": "Om",
     "alternative": {
-      "first": "1st alternative",
+      "first": "Første alternativ",
       "original": "Original",
-      "second": "2nd alternative",
-      "third": "3rd alternative"
+      "second": "Andre alternativ",
+      "third": "Tredje alternativ"
     },
-    "export": "Export",
+    "export": "Eksporter",
     "load": {
-      "nogos": "No-go areas",
-      "title": "Load",
-      "tracks": "Tracks"
+      "nogos": "No-go områder",
+      "title": "Last",
+      "tracks": "Stier"
     },
     "profile": {
-      "car-eco": "Car (economic)",
-      "car-fast": "Car (fast)",
+      "car-eco": "Bil (økonomisk)",
+      "car-fast": "Bil (rask)",
       "car-test": "Car (test)",
-      "custom": "Custom",
+      "custom": "Egendefinert",
       "fastbike": "Fastbike",
       "fastbike-asia-pacific": "Fastbike (Asia Pacific)",
       "fastbike-lowtraffic": "Fastbike (low traffic)",
